--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "react-dom": "^18.3.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.27.0",
+    "sass": "^1.80.4",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "eslint": "^8.57.1",
+    "prettier": "^3.3.3",
     "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
   },
   "eslintConfig": {
     "extends": [
